--- a/public/index.html
+++ b/public/index.html
@@ -15,29 +15,186 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- INSERTAR LAS FUENTES ACA -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Agdasima&family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/style/style.css" />
+    <!-- FIN DE LAS FUENTAS -->
+    <title>Royal Insurance LLC</title>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- INSERTAR HERRAMIENTA TAILWIND Y SCRIPTS -->
+    <script src="%PUBLIC_URL%/style/cdntailwind.5"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- ANIMACION CON EL SCROLL -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <!-- FIN DE IMPORTACION DE LA ANIMACION CON SCROLL -->
+
+    <!--=============== REMIXICONS ===============-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets2/css/styles.css" />
+
+    <link rel="stylesheet" href="%PUBLIC_URL%/style/estilos.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/style/estilos2.css" />
+    <!-- IMPORTAR ANIMACIONES -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <!--=============== REMIXICONS ===============-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css"
+      crossorigin=""
+    />
+
+    <!--=============== SWIPER CSS ===============-->
+    <link
+      rel="stylesheet"
+      href="%PUBLIC_URL%/assets/css/swiper-bundle.min.css"
+    />
+
+    <!--=============== CSS ===============-->
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/styles.css" />
+
+    <script src="%PUBLIC_URL%/js/function2.js"></script>
+
+    <style>
+      /*:::Boton-Modal:::*/
+      html {
+        scroll-behavior: smooth;
+      }
+      .boton-modal5 {
+        padding: 40px;
+        background-color: #fff;
+      }
+      .boton-modal5 label {
+        padding: 10px 15px;
+        background-color: #5488a3;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: all 300ms ease;
+      }
+      .boton-modal5 label:hover {
+        background-color: #185e83;
+      }
+      /*:::Fin Boton-Modal:::*/
+
+      /*:::Ventana Modal:::*/
+      #btn-modal5 {
+        display: none;
+      }
+      .container-modal5 {
+        width: 100%;
+        height: 100vh;
+        position: fixed;
+        top: 0;
+        left: 0;
+        display: none;
+        justify-content: center;
+        align-items: center;
+        z-index: 100;
+      }
+      #btn-modal5:checked ~ .container-modal5 {
+        display: flex;
+      }
+      .content-modal5 {
+        width: 100%;
+        max-width: 400px;
+        padding: 5px;
+        background-color: #cc9933;
+        border-radius: 4px;
+      }
+      .content-modal5 h2 {
+        margin-bottom: 15px;
+      }
+      .content-modal5 p {
+        padding: 15px 0px;
+        border-top: 1px solid #dbdbdb;
+        border-bottom: 1px solid #dbdbdb;
+      }
+      .content-modal5 .btn-cerrar5 {
+        width: 100%;
+        margin-top: 15px;
+        display: flex;
+        justify-content: flex-end;
+      }
+      .content-modal5 .btn-cerrar5 label {
+        padding: 7px 10px;
+        background-color: #5488a3;
+        color: #fff;
+        border-radius: 4px;
+        cursor: pointer;
+        transition: all 300ms ease;
+      }
+      .content-modal5 .btn-cerrar5 label:hover {
+        background-color: #185e83;
+      }
+      .cerrar-modal5 {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+      }
+      @media screen and (max-width: 800px) {
+        .content-modal5 {
+          width: 90%;
+        }
+      }
+    </style>
+
+    <!-- INSERTAR LOS ESTILOS -->
+    <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <!-- https://www.domestika.org/es/my_courses
+    cardozo.jelisa@gmail.com
+    1177-1780-Jj -->
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <!-- HEADER MENU MOBILE TABLET -->
   </body>
+  <script src="%PUBLIC_URL%/js/scriptmodal.js"></script>
+  <script src="%PUBLIC_URL%/js/function2.js"></script>
+  <script src="%PUBLIC_URL%/js/main.js"></script>
+  <script src="%PUBLIC_URL%/assets2/js/main.js"></script>
+
+  <script src="%PUBLIC_URL%/assets/js/swiper-bundle.min.js"></script>
+  <script src="%PUBLIC_URL%/assets/js/main.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
+
+  <!-- INICIAR EL SCRIPT DE ANIMACION CON SCROLL -->
+  <script>
+    AOS.init();
+  </script>
+  <!-- FIN DE LA INICIACION -->
 </html>
