--- a/public/index.html
+++ b/public/index.html
@@ -167,12 +167,16 @@
           width: 90%;
         }
       }
+      .bga-gray {
+        --tw-bg-opacity: 1;
+        background-color: rgb(249 250 251 / var(--tw-bg-opacity, 1));
+      }
     </style>
 
     <!-- INSERTAR LOS ESTILOS -->
     <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>
   </head>
-  <body>
+  <body class="bga-gray">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- https://www.domestika.org/es/my_courses
@@ -193,6 +197,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.js"></script>
 
   <!-- INICIAR EL SCRIPT DE ANIMACION CON SCROLL -->
+
   <script>
     AOS.init();
   </script>
