subiendo para trabajar mas tarde

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Iglesia El Aposento Alto - Maracaibo Zulia"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -33,7 +33,7 @@
     <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/style.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/style/style.css" />
     <!-- FIN DE LAS FUENTAS -->
-    <title>Royal Insurance LLC</title>
+    <title>El Aposento Alto</title>
 
     <!-- INSERTAR HERRAMIENTA TAILWIND Y SCRIPTS -->
     <script src="%PUBLIC_URL%/style/cdntailwind.5"></script>
